--- a/src/components/ImageCard/index.scss
+++ b/src/components/ImageCard/index.scss
@@ -3,6 +3,7 @@
   position: relative;
   padding: 0 10px;
   flex: 1 0 33%;
+  cursor: pointer;
 
   &:hover img{
     transform: scale(1.2);
@@ -30,5 +31,6 @@
     text-align: center;
     background-color: rgba(255,255,255,0.7);
     padding: 15px 50px;
+    border: 1px solid black;
   }
 }
