--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   font-family: OpenSans;
