added style to fix width of the cards on all views

--- a/src/components/CollectionsItem/index.scss
+++ b/src/components/CollectionsItem/index.scss
@@ -1,6 +1,8 @@
 .collections-item {
   margin: 10px;
-  width: 250px;
+  flex-basis: 23%;
+  min-width: 250px;
+  width: 23%;
 
   &__content {
     display: flex;
