--- a/src/components/CollectionsItem/index.scss
+++ b/src/components/CollectionsItem/index.scss
@@ -16,21 +16,28 @@
     width: auto;
     height: 300px;
     position: relative;
+    overflow: hidden;
 
     > img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       border: 1px solid black;
+      transition: transform 6s linear;
     }
 
-    &:hover .collections-item__image-overlay {
-      opacity: 1;
-
-      & .collections-item__image-overlay-content {
-        bottom: 15px
+    &:hover {
+      & img {
+        transform: scale(1.2);
       }
-    }
+      & .collections-item__image-overlay {
+        opacity: 1;
+  
+        & .collections-item__image-overlay-content {
+          bottom: 15px
+        }
+      }
+    } 
 
     &-overlay {
       opacity: 0;
