--- a/src/components/ImageCard/index.scss
+++ b/src/components/ImageCard/index.scss
@@ -5,9 +5,15 @@
   flex: 1 0 33%;
   cursor: pointer;
 
-  &:hover img{
-    transform: scale(1.2);
-  }
+  &:hover {
+    & img{
+      transform: scale(1.2);
+    }
+
+    & .image-card__content {
+      background-color: rgba(255,255,255,0.9);
+    }
+  } 
 
   &__background {
     height: 100%;
@@ -32,5 +38,6 @@
     background-color: rgba(255,255,255,0.7);
     padding: 15px 50px;
     border: 1px solid black;
+    transition: 0.3s linear;
   }
 }
