finished styling sign in page

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,4 @@
+@import './fonts';
 @mixin inputField {
   margin: 50px 0;
   & > label {
@@ -12,9 +13,11 @@
     border: none;
     outline: none;
     border-bottom: 1px solid #afafaf;
-    padding: 5px;
+    padding: 10px;
     transition: 0.3s linear;
     width: 100%;
+    font-size: 1.2rem;
+    font-family: OpenSans;
 
     &:focus {
       border-bottom: 1px solid black;
