--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,5 @@
 @import './fonts';
+
 @mixin inputField {
   margin: 50px 0;
   & > label {
@@ -23,4 +24,26 @@
       border-bottom: 1px solid black;
     }
   }
+}
+
+@mixin button {
+  padding: 10px 35px;
+  outline: none;
+  border: none;
+  text-transform: uppercase;
+  font-family: OpenSans;
+  min-width: 150px;
+  font-size: 1.1rem;
+}
+
+@mixin primary-button {
+  @include button;
+  color: white;
+  background-color: black;
+}
+
+@mixin secondary-button {
+  @include button;
+  color: white;
+  background-color: #4C8BF5;
 }
